--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -31,5 +31,17 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_tool_bar"
         tools:listitem="@layout/item_send" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButtonDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/normal_16dp"
+        android:layout_marginBottom="@dimen/normal_16dp"
+        android:contentDescription="@string/todo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_delete" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
