--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="normal_16dp">16dp</dimen>
     <dimen name="title_26sp">26sp</dimen>
     <dimen name="zero_dp">0dp</dimen>
+    <dimen name="long_60dp">60dp</dimen>
 </resources>
